tests/fixtures/invalid/bytes_in_none.py
# Cannot use 'in' with Bytes and None
x: bool = b"hello" in None
